--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>
+<div class="container mt-5 ml-0">
+    <div class="row">
+     <div class="col-md-4 mt-5">
+         <h1 class="rr">Lorem ipsum dolor </h1>
+         <h1>Lorem ipsum dolor </h1>
+     </div>   `
+    </div>
+</div>
 <script src="bootstrap/js/jquery.js"></script>
-<script src="bootstrap/js/popper.min.js"></script>
+<script src="bootstrap/js/src/popover.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
