--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
          <p>PROJEST  </p><br>
          <h1>NURTOWN</h1>
      </div>
-        <div class="col-md-6 media font-weight-bold">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio dolore
-            expedita fugit, in mollitia nihil optio provident. Facilis ipsum iusto nostrum quo quos
-            repudiandae voluptas voluptate voluptatibus. Nisi provident, velit. Atque labore magni vitae? At
-            eligendi eum excepturi itaque similique? Accusamus amet at dignissimos optio repudiandae sunt voluptatibus.
-            Architecto consequatur cumque eveniet facilis inventore laboriosam, neque perferendis qui quo vel? Ipsa optio,
-            quod! Aperiam commodi illo, ipsam ipsum iusto modi, nulla praesentium provident qui quibusdam recusandae,
-            rem sit suscipit tempora unde. Culpa error impedit officia officiis, porro saepe soluta vel?
+        <div class="col-md-6 ">
+            <img src="img/Rectangle%206%20(1).png" alt="">
         </div>
     </div>
 </div>
